kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels: 
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - vproapp
                - vprodb
                - vpromc
                - vprormq
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: vprodb
        image: vprocontainers/vprofiledb
        volumeMounts:
        - name: vpro-db-data
          mountPath: /var/lib/mysql 
        ports:
        - name: vprodb-port
          containerPort: 3306
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
