kubedefs/mcdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - vprodb
                    - vpromc
                    - vprormq
                topologyKey: "kubernetes.io/hostname"
      containers:
      - name: vpromc
        image: memcached
        ports:
        - containerPort: 11211

          name: vpromc-port
