kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels: 
    app: vprormq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - vprodb
                    - vpromc
                    - vprormq
                topologyKey: "kubernetes.io/hostname"
      containers:
      - name: vprormq
        image: rabbitmq:latest
        ports:
        - name: vprormq-port
          containerPort: 5672
