kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb
  ports:
  - name: http
    port: 3306
    targetPort: vprodb-port
    protocol: TCP
  type: ClusterIP
