kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec: 
  selector:
    app: vprormq
  ports:
  - name: http
    port: 5672
    targetPort: vprormq-port
    protocol: TCP
  type: ClusterIP
